# PolyMarket

./: .gitignore  README.md  config.example.toml  nohup.out  pyproject.toml
.claude/: settings.json
docs/: plan-phase2.md  plan.md  spec-phase2.md  spec.md  tasks-phase2.md  tasks.md
docs/adr/: 0002-mm-go-live.md
scripts/: analyze_log.py  analyze_mm_log.py  best_horizon_mm.py  calibrate_mm.py  dashboard_mm.py  live_smoke.py  market_study.py  paper_run_mm.py  viability_5m.py
src/polymarket_bot/common/: auth.py  config.py  fees.py  models.py  observation_log.py  risk.py
src/polymarket_bot/common/clients/: clob.py  gamma.py
src/polymarket_bot/common/execution/: __init__.py  base.py  live.py  live_maker.py  maker_base.py  paper.py  paper_maker.py
src/polymarket_bot/phase1_arbitrage/: cli.py  runner.py  strategy.py
src/polymarket_bot/phase2_market_making/: __init__.py  __main__.py  cli.py  inventory.py  pricing.py  quote_log.py  runner.py  strategy.py  volatility.py
tests/common/: test_auth.py  test_clients.py  test_config.py  test_fees.py  test_live_executor.py  test_live_maker_executor.py  test_models.py  test_observation_log.py  test_paper_executor.py  test_paper_maker_executor.py  test_risk.py
tests/phase1_arbitrage/: test_cli.py  test_runner.py  test_strategy.py
tests/phase2/: test_cli.py  test_inventory.py  test_pricing.py  test_quote_log.py  test_runner.py  test_strategy.py  test_volatility.py
