[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Educational Polymarket arbitrage bot (Phase 1) — paper-first, live behind guard flags"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "py-clob-client>=0.17",
    "web3>=6.15",
    "eth-account>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_bot"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: tests that hit the real Polymarket API (opt-in, excluded by default)",
]
addopts = "-m 'not live'"
